--- a/menu-hamburguer/media.css
+++ b/menu-hamburguer/media.css
@@ -13,7 +13,7 @@
         padding-top: 30px;
         margin-top: 30px;
     }
-    header span{
+    span#burguer{
         display: none;
     }
 }
