--- a/tela_login/style.css
+++ b/tela_login/style.css
@@ -31,12 +31,14 @@ body{
     text-align: center;
 }
 .input-box{
+    color: #fff;
     position: relative;
     width: 100%;
     height: 50px;
     margin: 30px 0;
 }
 .input-box input{
+    color: white;
     width: 100%;
     height: 100%;
     background-color: transparent;
